--- a/views/login.ejs
+++ b/views/login.ejs
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
     <link rel="icon" type="image/png" sizes="16x16" href="../assets/demo/favicon.html">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Viftech</title>
+    <title>Login</title>
     <!-- CSS -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:200,300,400,500,600%7CRoboto:400" rel="stylesheet" type="text/css">
     <link href="../assets/vendors/material-icons/material-icons.css" rel="stylesheet" type="text/css">
@@ -28,34 +28,38 @@
             <div class="col-lg-8 p-3 login-left">
                 <div class="w-50">
                     <h2 class="mb-4 text-center">Welcome back!</h2>
-                    <form class="text-center" method="POST" action="/users/authenticate">
+                    <!-- <form class="text-center" method="POST" action="/users/authenticate"> -->
+                        <form class="text-center" method="POST" action="/users/getAll">
+                        
                         <div class="form-group">
                             <label class="text-muted" for="example-email">Email</label>
-                            <input type="text" placeholder="" class="form-control form-control-line" id="example-email" name="username">
+                            <input type="email" placeholder="" class="form-control form-control-line" id="example-email" required name="email">
                         </div>
                         <div class="form-group">
                             <label class="text-muted" for="example-password">Password</label>
-                            <input type="password" placeholder="password" class="form-control form-control-line" id="example-password" name="password">
+                            <input type="password" placeholder="" class="form-control form-control-line" id="example-password" required name="password">
+                            <!-- <% if(error){ %>
+                            <h4 style="color: red;" >username or password is incorrect.</h4>
+                            <% } %> -->
                         </div>
                         <div class="form-group no-gutters mb-5 text-center"><a href="/forget" id="to-recover" class="text-muted fw-700 text-uppercase heading-font-family fs-12">Forgot Password?</a>
                         </div>
                         <!-- /.form-group -->
                         <div class="form-group mr-b-20">
                             <!-- <button class="btn btn-block btn-rounded btn-md btn-primary text-uppercase fw-600 ripple" type="button" onclick="window.location.href=''">Sign In</button> -->
-                            <button type="submit">Login</button>
+                            <button type="submit" class="btn btn-success" style="background-color: #81b840;">Login</button>
 
                         </div>
                     </form>
                     <!-- /form -->
-                    <button type="button" class="btn btn-block btn-rounded btn-outline-facebook ripple" title="Login with Facebook">Connect using <span class="fw-700">facebook</span>
-                    </button>
+                    
                 </div>
                 <!-- /.w-75 -->
             </div>
-            <div class="col-lg-4 login-right d-lg-flex d-none pos-fixed pos-right text-inverse container-min-full-height" style="background-image: url(assets/img/site-bg-small.jpg)">
+            <div class="col-lg-4 login-right d-lg-flex d-none pos-fixed pos-right text-inverse container-min-full-height" style="background-color: white;">
                 <div class="login-content px-3 w-75 text-center">
-                    <h2 class="mb-4 text-center fw-300">New here?</h2>
-                    <p class="heading-font-family fw-300 letter-spacing-minus">Sign up and discover the many great features that our app provides</p><a href="http://localhost:3000/signup" class="btn btn-rounded btn-md btn-outline-inverse text-uppercase fw-600 ripple pd-lr-60 mr-t-200">Sign Up</a>
+                    <h2 class="mb-4 text-center fw-300"><img src="../assets/logo/gtr-logo.jpg" /></h2>
+                    <!-- <p class="heading-font-family fw-300 letter-spacing-minus" style="color: #81b840;">Sign up and discover the many great features that our app provides</p><a href="/signup" class="btn btn-rounded btn-md btn-outline-inverse text-uppercase fw-600 ripple pd-lr-60 mr-t-200">Sign Up</a> -->
                    
                 </div>
                 <!-- /.login-content -->
